--- a/QuizGame/html/index.html
+++ b/QuizGame/html/index.html
@@ -19,7 +19,7 @@
     <p>Welcome to the QuizGame, press <span>Start!</span></p>
     <div>
         <a href="../html/quizgame.html">START!</a>
-        <a href="https://github.com/igleepuntoexe" target="_blank">EXIT</a>
+        <a href="https://github.com/igleepuntoexe/Example-of-QuizGame" target="_blank">EXIT</a>
     </div>
 </body>
 </html>
